nobase_include_HEADERS = \
	scroom/colormappable.hh \
	scroom/global.hh \
	scroom/memorymanagerinterface.hh \
	scroom/utilities.hh \
	scroom/registration.hh \
	scroom/observable.hh \
	scroom/plugininformationinterface.hh \
	scroom/presentationinterface.hh \
	scroom/scroominterface.hh \
	scroom/scroomplugin.hh \
	scroom/semaphore.hh \
	scroom/threadpool.hh \
	scroom/impl/threadpoolimpl.hh \
	scroom/tile.hh \
	scroom/tiledbitmapinterface.hh \
	scroom/unused.h \
	scroom/viewinterface.hh \
	scroom/async-deleter.hh \
	scroom/stuff.hh \
	scroom/bookkeeping.hh \
	scroom/impl/bookkeepingimpl.hh


