nobase_include_HEADERS = \
	scroom/assertions.hh \
	scroom/colormappable.hh \
	scroom/global.hh \
	scroom/memorymanagerinterface.hh \
	scroom/blockallocator.hh \
	scroom/memoryblobs.hh \
	scroom/utilities.hh \
	scroom/observable.hh \
	scroom/plugininformationinterface.hh \
	scroom/presentationinterface.hh \
	scroom/scroominterface.hh \
	scroom/scroomplugin.hh \
	scroom/semaphore.hh \
	scroom/threadpool.hh \
	scroom/impl/threadpoolimpl.hh \
	scroom/function-additor.hh \
	scroom/tile.hh \
	scroom/tiledbitmapinterface.hh \
	scroom/layeroperations.hh \
	scroom/unused.h \
	scroom/viewinterface.hh \
	scroom/progressinterfacemultiplexer.hh \
	scroom/async-deleter.hh \
	scroom/stuff.hh \
	scroom/bookkeeping.hh \
	scroom/impl/bookkeepingimpl.hh \
	scroom/gtk-helpers.hh


