nobase_include_HEADERS = \
	scroom/assertions.hh \
	scroom/async-deleter.hh \
	scroom/blockallocator.hh \
	scroom/bookkeeping.hh \
	scroom/colormappable.hh \
	scroom/function-additor.hh \
	scroom/global.hh \
	scroom/gtk-helpers.hh \
	scroom/impl/bookkeepingimpl.hh \
	scroom/impl/threadpoolimpl.hh \
	scroom/layeroperations.hh \
	scroom/memoryblobs.hh \
	scroom/memorymanagerinterface.hh \
	scroom/observable.hh \
	scroom/plugininformationinterface.hh \
	scroom/presentationinterface.hh \
	scroom/progressinterface.hh \
	scroom/progressinterfacehelpers.hh \
	scroom/scroominterface.hh \
	scroom/scroomplugin.hh \
	scroom/semaphore.hh \
	scroom/stuff.hh \
	scroom/threadpool.hh \
	scroom/tile.hh \
	scroom/tiledbitmapinterface.hh \
	scroom/timer.hh \
	scroom/unused.hh \
	scroom/utilities.hh \
	scroom/viewinterface.hh
